あるだけのimg追加とintro追加

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -108,6 +108,16 @@
 					<div class="p-img2 s mini"><img src="./images/detail/doodle/2.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
 					<div class="p-img3 g"><img src="./images/detail/doodle/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
 				</section>
+				<section id="res" class="intro-detail js-parallax js-progress">
+					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
+						<h3>サンプルテキスト</h3>
+						<p>使ったものを再利用して、新たなものを作る卓です。周りにあるものを見つめ直し、アイデアの出し方を学びます。前半はグループ制作、後半は個人制作を行います。グループ制作では制作物を『椅子』と指定、個人制作では制作物の指定はせず『自分の欲しいもの』をテーマに家具や雑貨などを制作します。</p>
+					</div>
+					<div class="p-logo"><img src="./images/detail/res/logo.png" alt="" data-enllax-ratio="0.5" data-enllax-type="foreground"></div>
+					<div class="p-img1 g"><img src="./images/detail/doodle/1.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+					<div class="p-img2 s mini"><img src="./images/detail/doodle/2.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+					<div class="p-img3 b"><img src="./images/detail/res/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+				</section>
 				<section id="careco" class="intro-detail js-parallax js-progress">
 					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 						<h3>カーデザインを学ぶ。</h3>
@@ -118,6 +128,16 @@
 					<div class="p-img2 b mini"><img src="./images/detail/careco/2.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
 					<div class="p-img3 g"><img src="./images/detail/careco/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
 				</section>
+				<section id="jackin" class="intro-detail js-parallax js-progress">
+					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
+						<h3>遊び心を取り入れたWeb制作</h3>
+						<p>身の回りのモノから音を創りだすモノを作る卓。我々の生きるこの世界は様々なモノで溢れています。この卓はそういったモノたちから音を創ることによって新たな楽しみを提供することを目的としています。触れて楽しい、見て楽しいものを制作します。ぜひ会場に遊びにきてください。</p>
+					</div>
+					<div class="p-logo"><img src="./images/detail/jackin/logo.png" alt="" data-enllax-ratio="0.5" data-enllax-type="foreground"></div>
+					<div class="p-img1 b"><img src="./images/detail/jackin/1.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+					<div class="p-img2 g mini"><img src="./images/detail/doodle/2.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+					<div class="p-img3 s"><img src="./images/detail/doodle/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+				</section>
 				<section id="irodori" class="intro-detail js-parallax js-progress">
 					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
 						<h3>色について学び、想像し、表現する。</h3>
@@ -127,6 +147,36 @@
 					<div class="p-img1 b"><img src="./images/detail/irodori/1.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
 					<div class="p-img2 g mini"><img src="./images/detail/irodori/2.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
 					<div class="p-img3 s"><img src="./images/detail/irodori/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+				</section>
+				<section id="mixm" class="intro-detail js-parallax js-progress">
+					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
+						<h3>遊び心を取り入れたWeb制作</h3>
+						<p>芸工生それぞれの専攻するものをミックスし、アート作品を制作する卓。作品のテーマには"予感"を設定し、メンバーそれぞれの思う"予感"について表現する。映像、サウンド、プログラミング、造形美術、テキスタイルなど、あらゆるジャンルの組合せの可能性を探る。</p>
+					</div>
+					<div class="p-logo"><img src="./images/detail/mixm/logo.png" alt="" data-enllax-ratio="0.5" data-enllax-type="foreground"></div>
+					<div class="p-img1 g"><img src="./images/detail/doodle/1.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+					<div class="p-img2 s mini"><img src="./images/detail/doodle/2.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+					<div class="p-img3 b"><img src="./images/detail/doodle/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+				</section>
+				<section id="glyph" class="intro-detail js-parallax js-progress">
+					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
+						<h3>文字遊びを楽しむ。</h3>
+						<p>文字に関連した作品を作る卓です。タイポグラフィやフォント制作に関することを勉強していきます。初めに全員で同じテーマのもと、自由にアイデア出しを行い一つのフォントを制作します。最終制作物にはテーマなどは設けず、自由に個人制作を行ってもらいます。また、展示の空間デザインや卓のポートフォリオ制作も行う予定です。</p>
+					</div>
+					<div class="p-logo"><img src="./images/detail/glyph/logo.png" alt="" data-enllax-ratio="0.5" data-enllax-type="foreground"></div>
+					<div class="p-img1 s"><img src="./images/detail/glyph/1.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+					<div class="p-img2 b mini"><img src="./images/detail/glyph/2.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+					<div class="p-img3 g"><img src="./images/detail/doodle/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+				</section>
+				<section id="wavwav" class="intro-detail js-parallax js-progress">
+					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
+						<h3>遊び心を取り入れたWeb制作</h3>
+						<p>3~4人ずつのグループに別れて音楽を制作する卓。グループごとにテーマを掲げ、そのテーマにそってメンバー各々が制作した楽曲を合わせて１つの作品とする。殆どのメンバーがDTMによる音楽制作に初挑戦ながら、短期間の間で基本的なDAWの操作からスケールなどの簡単な音楽理論などを学び、1から音楽制作に取り組む。</p>
+					</div>
+					<div class="p-logo"><img src="./images/detail/wavwav/logo.png" alt="" data-enllax-ratio="0.5" data-enllax-type="foreground"></div>
+					<div class="p-img1 b"><img src="./images/detail/doodle/1.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+					<div class="p-img2 s mini"><img src="./images/detail/wavwav/2.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+					<div class="p-img3 g"><img src="./images/detail/doodle/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
 				</section>
 
 			</section>
