--- a/app/source/scss/_intro.scss
+++ b/app/source/scss/_intro.scss
@@ -38,7 +38,7 @@
 #brica {
     height: 1200px;
     .p-text {
-        top: 400px;
+        top: 390px;
     }
     .p-logo {
         top: 295px;
@@ -49,11 +49,11 @@
         right: 0;
     }
     .p-img2 {
-        top: 450px;
+        top: 440px;
         right: 0;
     }
     .p-img3 {
-        top: 790px;
+        top: 780px;
         left: 0;
     }
 }
@@ -127,6 +127,29 @@
     }
 }
 
+#res {
+    height: 1150px;
+    .p-text {
+        top: 400px;
+    }
+    .p-logo {
+        top: 120px;
+        left: 0;
+    }
+    .p-img1 {
+        top: 0;
+        right: 0;
+    }
+    .p-img2 {
+        top: 440px;
+        right: 0;
+    }
+    .p-img3 {
+        top: 700px;
+        left: 0;
+    }
+}
+
 #careco {
     height: 1200px;
     .p-text {
@@ -150,13 +173,36 @@
     }
 }
 
+#jackin {
+    height: 1180px;
+    .p-text {
+        top: 430px;
+    }
+    .p-logo {
+        top: 250px;
+        left: 0;
+    }
+    .p-img1 {
+        top: 0;
+        right: 0;
+    }
+    .p-img2 {
+        top: 460px;
+        right: 0;
+    }
+    .p-img3 {
+        top: 720px;
+        left: 0;
+    }
+}
+
 #irodori {
     height: 1230px;
     .p-text {
         top: 450px;
     }
     .p-logo {
-        top: 370px;
+        top: 300px;
         right: 0;
     }
     .p-img1 {
@@ -168,7 +214,76 @@
         right: 0;
     }
     .p-img3 {
-        top: 790px;
+        top: 760px;
+        left: 0;
+    }
+}
+
+#mixm {
+    height: 1180px;
+    .p-text {
+        top: 420px;
+    }
+    .p-logo {
+        top: 90px;
+        left: 0;
+    }
+    .p-img1 {
+        top: 0;
+        right: 0;
+    }
+    .p-img2 {
+        top: 460px;
+        right: 0;
+    }
+    .p-img3 {
+        top: 710px;
+        left: 0;
+    }
+}
+
+#glyph {
+    height: 1200px;
+    .p-text {
+        top: 420px;
+    }
+    .p-logo {
+        top: 300px;
+        right: 0;
+    }
+    .p-img1 {
+        top: 0;
+        left: 0;
+    }
+    .p-img2 {
+        top: 460px;
+        right: 0;
+    }
+    .p-img3 {
+        top: 730px;
+        left: 0;
+    }
+}
+
+#wavwav {
+    height: 1190px;
+    .p-text {
+        top: 420px;
+    }
+    .p-logo {
+        top: 230px;
+        left: 0;
+    }
+    .p-img1 {
+        top: 0;
+        right: 0;
+    }
+    .p-img2 {
+        top: 460px;
+        right: 0;
+    }
+    .p-img3 {
+        top: 700px;
         left: 0;
     }
 }
