--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -36,19 +36,19 @@
 				<table>
 					<tr>
 						<td>日時：</td>
-						<td>2016年8月19日(金)~8月21日(日)</td>
+						<td>2016年8月19日(金) ~ 8月21日(日)</td>
 					</tr>
 					<tr>
 						<td></td>
-						<td>10:00~17:00(最終日~16:00)</td>
+						<td>10:00~17:00（最終日 16:00閉場）</td>
 					</tr>
 					<tr>
 						<td>会場：</td>
-						<td>名古屋市立大学 北千種キャンパス</td>
+						<td>名古屋市立大学 北千種キャンパス 芸工棟</td>
 					</tr>
 					<tr>
 						<td></td>
-						<td>名古屋市千種区北千種2‐1‐10</td>
+						<td><a href="https://www.google.com/maps?q=35.180972,136.947420">愛知県名古屋市千種区北千種2‐1‐10</a></td>
 					</tr>
 				</table>
 			</section>
