--- a/app/source/scss/style.scss
+++ b/app/source/scss/style.scss
@@ -169,6 +169,7 @@ $sidebar: 330px;
 	.progress {
 		position: relative;
 		.progress-title {
+			width: 155px;
 			position: relative;
 			padding-top: 20px;
 			padding-left: 20px;
