--- a/app/source/scss/style.scss
+++ b/app/source/scss/style.scss
@@ -14,6 +14,36 @@ body {
 	font-weight: bold;
 }
 
+.p-bg {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	z-index: -2;
+	background: url("../images/common/bg1.png");
+}
+
+.p-bg2 {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	z-index: -2;
+	background: url("../images/common/bg2.png");
+}
+
+.p-bg3 {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+	z-index: -2;
+	background: url("../images/common/bg3.png");
+}
+
 #banner {
 	height: 53.125vw;
 
@@ -96,6 +126,9 @@ $sidebar: 330px;
 	}
 }
 
+.map {
+	margin: 50px 0 0;
+}
 .about,
 .map,
 .access {
@@ -122,13 +155,13 @@ $sidebar: 330px;
 				background: repeat 0 0;
 			}
 			&.b::after {
-				background-image: url('../images/detail/bg/b.png');
+				// background-image: url('../images/detail/bg/b.png');
 			}
 			&.g::after {
-				background-image: url('../images/detail/bg/g.png');
+				// background-image: url('../images/detail/bg/g.png');
 			}
 			&.s::after {
-				background-image: url('../images/detail/bg/s.png');
+				// background-image: url('../images/detail/bg/s.png');
 			}
 			&.mini::after {
 				height: 230px;
@@ -202,7 +235,7 @@ $sidebar: 330px;
 		}
 		a {
 			padding-bottom: 2px;
-			color: $blue;
+			color: $base-font-color;
 			text-decoration: none;
 			text-shadow: 2.5px 2.5px 0 rgba(255,255,255,1);
 		}
@@ -218,10 +251,18 @@ $sidebar: 330px;
 }
 
 #footer {
+	position: relative;
 	width: 100%;
 	overflow: hidden;
 	text-align: center;
 	clear: both;
 	height: 300px;
 	background: $blue;
+	z-index: -1;
+	.copyright {
+		position: absolute;
+		bottom: 0;
+		color: #fff;
+		font-size: 12px;
+	}
 }
