フッターの調整と、topに背景追加

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -25,7 +25,7 @@
 		</div>
 	</section>
 	<main id="main">
-		<div class="p-bg js-parallax" data-enllax-ratio="-0.008" data-enllax-type="background"></div>
+		<div class="p-bg1 js-parallax" data-enllax-ratio="-0.009" data-enllax-type="background"></div>
 		<div class="p-bg2 js-parallax" data-enllax-ratio="-0.02" data-enllax-type="background"></div>
 		<div class="p-bg3 js-parallax" data-enllax-ratio="-0.04" data-enllax-type="background"></div>
 		<div class="main-inner">
@@ -221,6 +221,8 @@
 		</nav>
 	</aside>
 	<footer id="footer">
+		<p class="share-btn"><img src="./images/social/share.png" alt="シェア"></p>
+		<p class="tweet-btn"><img src="./images/social/tweet.png" alt="ツイート"></p>
 		<small class="copyright">&copy; 2016 卓展</small>
 	</footer>
 	<% include _script %>
