--- a/app/source/scss/style.scss
+++ b/app/source/scss/style.scss
@@ -14,26 +14,8 @@ body {
 	font-weight: bold;
 }
 
-.p-bg {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100vw;
-	height: 100vh;
-	z-index: -2;
-	background: url("../images/common/bg1.png");
-}
-
-.p-bg2 {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100vw;
-	height: 100vh;
-	z-index: -2;
-	background: url("../images/common/bg2.png");
-}
-
+.p-bg1,
+.p-bg2,
 .p-bg3 {
 	position: fixed;
 	top: 0;
@@ -41,11 +23,23 @@ body {
 	width: 100vw;
 	height: 100vh;
 	z-index: -2;
+}
+
+.p-bg1 {
+	background: url("../images/common/bg1.png");
+}
+
+.p-bg2 {
+	background: url("../images/common/bg2.png");
+}
+
+.p-bg3 {
 	background: url("../images/common/bg3.png");
 }
 
 #banner {
 	height: 53.125vw;
+	background-color: #eff2f5;
 
 	.symbols {
 		min-width: 1100px;
@@ -109,7 +103,7 @@ $sidebar: 330px;
 		margin: 0 auto;
 	}
 	h2 {
-		margin: 10px 0 50px 0;
+		margin: 15px 0 50px 0;
 		text-align: center;
 	}
 }
@@ -122,6 +116,7 @@ $sidebar: 330px;
 	table {
 		td {
 			padding: 7px 0;
+			text-shadow: 3px 2.5px 0 rgba(255,255,255,1);
 		}
 	}
 }
@@ -174,8 +169,8 @@ $sidebar: 330px;
 		}
 		.intro-text {
 			h3 {
-				font-size: 30px;
-				margin: .8em 0 .8em 0;
+				font-size: 29px;
+				margin: .8em 0 .7em 0;
 				text-shadow: 4px 4px 0 rgba(255,255,255,1);
 				line-height: 1.1em;
 			}
@@ -227,7 +222,7 @@ $sidebar: 330px;
 	.gnav {
 		font-size: 13px;
 		letter-spacing: 1.9px;
-		margin: 120px 0 0 65px;
+		margin: 110px 0 0 65px;
 		li {
 			width: 90px;
 			margin: 28px 0;
@@ -252,16 +247,26 @@ $sidebar: 330px;
 
 #footer {
 	position: relative;
+	bottom: -16px; //これがないと浮く
 	width: 100%;
 	overflow: hidden;
 	text-align: center;
 	clear: both;
 	height: 300px;
-	background: $blue;
+	background: #c2d0d7;
 	z-index: -1;
+	.share-btn, .tweet-btn {
+		display: inline-block;
+		width: 130px;
+		margin: 80px 0 0;
+	}
 	.copyright {
+		display: block;
 		position: absolute;
-		bottom: 0;
+		left: 0;
+		right: 0;
+		bottom: 20px;
+		margin: 0;
 		color: #fff;
 		font-size: 12px;
 	}
