--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -171,6 +171,16 @@
 					<div class="p-img2 s mini"><img src="./images/detail/wavwav/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
 					<div class="p-img3 g"><img src="./images/detail/doodle/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
 				</section>
+				<section class="intro-detail js-parallax js-progress js-randomListItem" id="jackin">
+					<div class="p-text intro-text" data-enllax-ratio="0" data-enllax-type="foreground">
+						<h3>遊び心を取り入れたWeb制作</h3>
+						<p>3~4人ずつのグループに別れて音楽を制作する卓。グループごとにテーマを掲げ、そのテーマにそってメンバー各々が制作した楽曲を合わせて１つの作品とする。殆どのメンバーがDTMによる音楽制作に初挑戦ながら、短期間の間で基本的なDAWの操作からスケールなどの簡単な音楽理論などを学び、1から音楽制作に取り組む。</p>
+					</div>
+					<div class="p-logo"><img src="./images/detail/wavwav/logo.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+					<div class="p-img1 b"><img src="./images/detail/doodle/1.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
+					<div class="p-img2 s mini"><img src="./images/detail/wavwav/2.png" alt="" data-enllax-ratio="-0.07" data-enllax-type="foreground"></div>
+					<div class="p-img3 g"><img src="./images/detail/doodle/3.png" alt="" data-enllax-ratio="0.07" data-enllax-type="foreground"></div>
+				</section>
 			</section>
 			<section class="access js-progress" id="access">
 				<h2><img src="./images/access/h2.png" alt="アクセス"></h2>
