カスタムgooglemap実装

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -184,6 +184,7 @@
 			</section>
 			<section class="access js-progress" id="access">
 				<h2><img src="./images/access/h2.png" alt="アクセス"></h2>
+				<div class="googlemap" id="map_canvas"></div>
 				<div class="bus-recommend"><img src="./images/access/bus_icon.png" alt=""><span>バスのご利用をおすすめします</span></div>
 				<img src="./images/access/bus_detail.png" alt="バスを使ってくる場合">
 			</section>
