--- a/app/source/scss/style.scss
+++ b/app/source/scss/style.scss
@@ -184,8 +184,13 @@ $sidebar: 330px;
 
 .access {
 	padding-bottom: 100px;
+	.googlemap {
+		width: 100%;
+		height: 350px;
+		background-color: #eee;
+	}
 	.bus-recommend {
-		margin: 0 0 12px 0;
+		margin: 30px 0 12px 0;
 		span {
 			display: inline-block;
 			vertical-align: top;
