--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -51,7 +51,7 @@
 					</tr>
 					<tr>
 						<td></td>
-						<td><a href="https://www.google.com/maps?q=35.180972,136.947420">愛知県名古屋市千種区北千種2‐1‐10</a></td>
+						<td><a href="https://www.google.com/maps?q=35.180972,136.947420" target="_blank">愛知県名古屋市千種区北千種2‐1‐10</a></td>
 					</tr>
 				</table>
 			</section>
@@ -185,8 +185,10 @@
 			<section class="access js-progress" id="access">
 				<h2><img src="./images/access/h2.png" alt="アクセス"></h2>
 				<div class="googlemap" id="map_canvas"></div>
-				<div class="bus-recommend"><img src="./images/access/bus_icon.png" alt=""><span>バスのご利用をおすすめします</span></div>
-				<img src="./images/access/bus_detail.png" alt="バスを使ってくる場合">
+				<div class="bus-recommend">
+					<img src="./images/access/bus_icon.png" alt=""><span>バスのご利用をおすすめします</span>
+					<p class="bus-detail"><img src="./images/access/bus_detail.png" alt="バスを使ってくる場合"></p>
+				</div>
 			</section>
 		</div>
 	</main>
