--- a/app/source/scss/style.scss
+++ b/app/source/scss/style.scss
@@ -118,6 +118,9 @@ $sidebar: 330px;
 			padding: 7px 0;
 			text-shadow: 3px 2.5px 0 rgba(255,255,255,1);
 		}
+		a {
+			color: $blue;
+		}
 	}
 }
 
@@ -182,16 +185,21 @@ $sidebar: 330px;
 .access {
 	padding-bottom: 100px;
 	.googlemap {
-		width: 100%;
+		width: 88%;
 		height: 350px;
+		margin: 0 auto;
 		background-color: #eee;
 	}
 	.bus-recommend {
-		margin: 30px 0 12px 0;
+		width: 86%;
+		margin: 36px auto 12px auto;
 		span {
 			display: inline-block;
 			vertical-align: top;
 			padding: 3px 0 0 5px;
+		}
+		.bus-detail {
+			margin: 16px 0 0;
 		}
 	}
 }
