--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -25,9 +25,9 @@
 		</div>
 	</section>
 	<main id="main">
-		<div class="p-bg1 js-parallax" data-enllax-ratio="-0.009" data-enllax-type="background"></div>
-		<div class="p-bg2 js-parallax" data-enllax-ratio="-0.02" data-enllax-type="background"></div>
-		<div class="p-bg3 js-parallax" data-enllax-ratio="-0.04" data-enllax-type="background"></div>
+		<div class="p-bg1 js-parallax" data-enllax-ratio="-0.015" data-enllax-type="background"></div>
+		<div class="p-bg2 js-parallax" data-enllax-ratio="-0.04" data-enllax-type="background"></div>
+		<div class="p-bg3 js-parallax" data-enllax-ratio="-0.06" data-enllax-type="background"></div>
 		<div class="main-inner">
 			<section class="about js-progress" id="about">
 				<h2><img src="./images/about/h2.png" alt="開催概要"></h2>
@@ -57,6 +57,7 @@
 			</section>
 			<section class="map js-progress" id="map">
 				<h2><img src="./images/map/h2.png" alt="会場マップ"></h2>
+				<p class="floor-map"><img src="./images/map/map.png" alt="会場マップ"></p>
 			</section>
 			<section class="intro js-randomList" id="intro">
 				<h2><img src="./images/detail/h2.png" alt="卓紹介"></h2>
