--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -186,8 +186,10 @@
 				<section class="access js-progress" id="access">
 					<h2><img src="./images/access/h2.png" alt="アクセス"></h2>
 					<div class="googlemap" id="map_canvas"></div>
-					<div class="bus-recommend"><img src="./images/access/bus_icon.png" alt=""><span>バスのご利用をおすすめします</span></div>
-					<img src="./images/access/bus_detail.png" alt="バスを使ってくる場合">
+					<div class="bus-recommend">
+						<img src="./images/access/bus_icon.png" alt=""><span>バスのご利用をおすすめします</span>
+						<p class="bus-detail"><img src="./images/access/bus_detail.png" alt="バスを使ってくる場合"></p>
+					</div>
 				</section>
 			</div>
 		</main>
