head少し追加と背景変更

--- a/app/source/ejs/_head.ejs
+++ b/app/source/ejs/_head.ejs
@@ -1,12 +1,12 @@
 <meta charset="UTF-8">
-<title>卓展2016 | 名古屋市立大学芸術工学部で開催される展示会</title>
-<meta name="description" content="">
+<title>卓展2016 | 名古屋市立大学芸術工学部の学生による12のプロジェクトの成果発表・展示会</title>
+<meta name="description" content="「卓展」とは、名古屋市立大学芸術工学部の学生による作品展示会です。学部４年生をリーダーとして多種多様なジャンルのプロジェクトを立ち上げ、学科・学年の垣根を越えて制作を行います。今年も見どころたっぷりの展示会ですので、是非お越しください。">
 <meta name="viewport" content="">
-<meta property="og:title" content="">
+<meta property="og:title" content="卓展2016 | 名古屋市立大学芸術工学部の学生による12のプロジェクトの成果発表・展示会">
 <meta property="og:type" content="website">
-<meta property="og:url" content="">
+<meta property="og:url" content="http://taku-ten.com">
 <meta property="og:image" content="">
-<meta property="og:description" content="">
+<meta property="og:description" content="「卓展」とは、名古屋市立大学芸術工学部の学生による作品展示会です。学部４年生をリーダーとして多種多様なジャンルのプロジェクトを立ち上げ、学科・学年の垣根を越えて制作を行います。今年も見どころたっぷりの展示会ですので、是非お越しください。">
 <link rel="stylesheet" href="./css/style.css">
 <link rel="icon" type="image/vnd.microsoft.icon" href="">
 <!-- アナリティクス忘れずに入れる -->
