--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -58,6 +58,7 @@
 				</section>
 				<section class="map js-progress" id="map">
 					<h2><img src="./images/map/h2.png" alt="会場マップ"></h2>
+					<p class="floor-map"><img src="./images/map/map.png" alt="会場マップ"></p>
 				</section>
 				<section class="intro js-randomList" id="intro">
 					<h2><img src="./images/detail/h2.png" alt="卓紹介"></h2>
