レスポンシブにしてる途中

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -26,13 +26,14 @@
 	</section>
 	<div class="container clearfix">
 		<main id="main">
-			<div class="p-bg1 js-parallax" data-enllax-ratio="-0.009" data-enllax-type="background"></div>
-			<div class="p-bg2 js-parallax" data-enllax-ratio="-0.02" data-enllax-type="background"></div>
-			<div class="p-bg3 js-parallax" data-enllax-ratio="-0.04" data-enllax-type="background"></div>
+			<div class="p-bg1 js-parallax js-parallax-sp" data-enllax-ratio="-0.009" data-enllax-type="background"></div>
+			<div class="p-bg2 js-parallax js-parallax-sp" data-enllax-ratio="-0.02" data-enllax-type="background"></div>
+			<div class="p-bg3 js-parallax js-parallax-sp" data-enllax-ratio="-0.04" data-enllax-type="background"></div>
 			<div class="main-inner">
 				<section class="about js-progress" id="about">
 					<h2><img src="./images/about/h2.png" alt="開催概要"></h2>
-					<h3><img src="./images/about/h3.png" alt="デザインを学ぶ学生による12のプロジェクトの成果発表・展示会"></h3>
+					<h3 class="media-pc"><img src="./images/about/h3.png" alt="デザインを学ぶ学生による12のプロジェクトの成果発表・展示会"></h3>
+					<h3 class="media-u-tablet"><img src="./images/about/h3-sp.png" alt="デザインを学ぶ学生による12のプロジェクトの成果発表・展示会"></h3>
 					<p>「卓展」とは、名古屋市立大学芸術工学部の学生による作品展示会です。<br>
 						プロジェクトに賛同した人々が卓を囲むように集まることから「卓展」となりました。</p>
 					<p>学部４年生をリーダーとして多種多様なジャンルのプロジェクトを立ち上げ、<br>学科・学年の垣根を越えて制作を行います。</p>
@@ -58,7 +59,8 @@
 				</section>
 				<section class="map js-progress" id="map">
 					<h2><img src="./images/map/h2.png" alt="会場マップ"></h2>
-					<p class="floor-map"><img src="./images/map/map.png" alt="会場マップ"></p>
+					<p class="floor-map media-pc"><img src="./images/map/map.png" alt="会場マップ"></p>
+					<p class="floor-map media-u-tablet"><img src="./images/map/map-sp.png" alt="会場マップ"></p>
 				</section>
 				<section class="intro js-randomList" id="intro">
 					<h2><img src="./images/detail/h2.png" alt="卓紹介"></h2>
