--- a/app/source/scss/_setting.scss
+++ b/app/source/scss/_setting.scss
@@ -9,3 +9,27 @@ $base-background-color: #fff;
 
 $gray: #e1e6e6;
 $blue: #053077;
+
+//メディアクエリ
+@mixin media($media-width) {
+	@if $media-width == sp {
+		@media only screen and (max-width: 767px){
+			@content;
+		}
+	}
+	@else if $media-width == tablet {
+		@media only screen and (min-width: 768px) and (max-width: 1279px){
+			@content;
+		}
+	}
+	@else if $media-width == u-tablet {
+		@media only screen and (max-width: 1279px){
+			@content;
+		}
+	}
+	@else if $media-width == pc {
+		@media only screen and (min-width: 1280px) {
+			@content;
+		}
+	}
+}
