スマホ調整ちゅう

--- a/app/source/ejs/index.ejs
+++ b/app/source/ejs/index.ejs
@@ -190,7 +190,7 @@
 					<h2><img src="./images/access/h2.png" alt="アクセス"></h2>
 					<div class="googlemap" id="map_canvas"></div>
 					<div class="bus-recommend">
-						<img src="./images/access/bus_icon.png" alt=""><span>バスのご利用をおすすめします</span>
+						<span class"bus-icon"><img src="./images/access/bus_icon.png" alt=""></span><span>バスのご利用をおすすめします</span>
 						<p class="bus-detail"><img src="./images/access/bus_detail.png" alt="バスを使ってくる場合"></p>
 					</div>
 				</section>
